Make header align correctly

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -715,7 +715,7 @@ a {
   @media (min-width: 992px) {
     background: none;
     position: absolute;
-    top: 10px;
+    top: 0;
     padding: 0;
     width: 100%;
 
